# GPU_Lattice_Boltzmann

./: .gitignore  CMakeLists.txt  README.md  ]  main  make.sh
data/: output_0.vtr
src/: .m_lattice_boltzman.f90.swp  .m_problems.f90.swp  .m_vtk.f90.swp  .p_main.f90.swp  m_boundary_conditions.f90  m_derived_types.f90  m_global_parameters.f90  m_helper.f90  m_helpers.f90  m_lattice_boltzman.f90  m_module.f90  m_mpi_proxy.f90  m_problem_setup.f90  m_problems.f90  m_vtk.f90  p_main.f90
